--- a/page.css
+++ b/page.css
@@ -1,251 +1,186 @@
-.centerMe {
-    margin: 0 auto;
+#textarea_editor .centerMe {
+	 margin: 0 auto;
 }
-
-.abs {
-    position: absolute;
+ #textarea_editor .abs {
+	 position: absolute;
 }
-
-.rel {
-    position: relative;
+ #textarea_editor .rel {
+	 position: relative;
 }
-
-.inlineMe {
-    display: inline-block;
+ #textarea_editor .inlineMe {
+	 display: inline-block;
 }
-
-.centerAbs {    
-    left: 50%;
-    transform: translateX(-50%);
+ #textarea_editor .centerAbs {
+	 left: 50%;
+	 transform: translateX(-50%);
 }
-
-.leftAlign {
-    text-align: left;
+ #textarea_editor .leftAlign {
+	 text-align: left;
 }
-
-.pointer {
-    cursor: pointer;
+ #textarea_editor .pointer {
+	 cursor: pointer;
 }
-
-.murgadoMaxWidth {
-    max-width: 1600px;
-    width: 100%;
+ #textarea_editor .murgadoMaxWidth {
+	 max-width: 1600px;
+	 width: 100%;
 }
-
-.maxWidth {
-    width: 100%;
+ #textarea_editor .maxWidth {
+	 width: 100%;
 }
-
-a {
-    text-decoration: none;
+ #textarea_editor a {
+	 text-decoration: none;
 }
-
-a[x-apple-data-detectors=true] { color: inherit !important; text-decoration: inherit !important;}
-
-h1, h2, h3, h4 {
-    color: #000000;
-    line-height: 120%;
+ #textarea_editor a[x-apple-data-detectors=true] {
+	 color: inherit !important;
+	 text-decoration: inherit !important;
 }
-
-h1 {
-    font-size: 60px;
+ #textarea_editor h1, #textarea_editor h2, #textarea_editor h3, #textarea_editor h4 {
+	 color: #000000;
+	 line-height: 120%;
 }
-
-h2 {
-    font-size: 36px;
+ #textarea_editor h1 {
+	 font-size: 60px;
 }
-
-h3 {
-    font-size: 30px;
+ #textarea_editor h2 {
+	 font-size: 36px;
 }
-
-h4 {
-    font-size: 24px;
+ #textarea_editor h3 {
+	 font-size: 30px;
 }
-
-.murgadoRed {
-    background-color: #CF142B;
+ #textarea_editor h4 {
+	 font-size: 24px;
 }
-
-.murgadoBlue {
-    background-color: #002A8F;
+ #textarea_editor .murgadoRed {
+	 background-color: #CF142B;
 }
-
-.spacer10 {
-    height: 10px;
+ #textarea_editor .murgadoBlue {
+	 background-color: #002A8F;
 }
-
-.spacer20 {
-    height: 20px;
+ #textarea_editor .spacer10 {
+	 height: 10px;
 }
-
-.spacer30 {
-    height: 30px;
+ #textarea_editor .spacer20 {
+	 height: 20px;
 }
-
-.spacer40 {
-    height: 40px;
+ #textarea_editor .spacer30 {
+	 height: 30px;
 }
-
-.spacer10, .spacer20, .spacer30, .spacer40 {
-    width: 100%;
+ #textarea_editor .spacer40 {
+	 height: 40px;
 }
-
-/* - - - - - - - - Testimonial: */
-
-#testimonialBigCont {
-    text-align: center;
-    overflow: hidden;
-    z-index: 2000;
-    padding: 30px 0;
-    background-color: #ffffff;
+ #textarea_editor .spacer10, #textarea_editor .spacer20, #textarea_editor .spacer30, #textarea_editor .spacer40 {
+	 width: 100%;
 }
-
-#testimonialCont {
-    overflow: hidden;
-    padding: 50px;
-    background-color: #F4F4F4;
-    transition: all 0.4s ease-in-out;
+ #textarea_editor #testimonialBigCont {
+	 text-align: center;
+	 overflow: hidden;
+	 z-index: 2000;
+	 padding: 30px 0;
+	 background-color: #ffffff;
 }
-
-.testimonials {
-    color: #000000;
-    text-align: left;
-    width: 100%;
-    max-width: 960px;
-    font-size: 22px;
-    line-height: 150%;
-    margin-bottom: 50px;
-    display: none;
-    transition: all 0.4s ease-in-out;
+ #textarea_editor #testimonialCont {
+	 overflow: hidden;
+	 padding: 50px;
+	 background-color: #F4F4F4;
+	 transition: all 0.4s ease-in-out;
 }
-
-#testimonial01 {
-    display: inline-block;
+ #textarea_editor .testimonials {
+	 color: #000000;
+	 text-align: left;
+	 width: 100%;
+	 max-width: 960px;
+	 font-size: 22px;
+	 line-height: 150%;
+	 margin-bottom: 50px;
+	 display: none;
+	 transition: all 0.4s ease-in-out;
 }
-
-/* - - - - - - - - Testimonial Stars: */
-
-.testimonialStarCont {
-    width: 200px;
-    margin-bottom: 30px;
+ #textarea_editor #testimonial01 {
+	 display: inline-block;
 }
-
-/* - - - - - - - - Testimonial Dots: */
-
-#testimonialDotContainer {
-    width: 90%;
-    max-width: 220px;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
+ #textarea_editor .testimonialStarCont {
+	 width: 200px;
+	 margin-bottom: 30px;
 }
-
-.testinomialDots {
-    width: 8px;
-    height: 8px;
-    border-radius: 4px;
-    border: 1px solid #002A8F;
+ #textarea_editor #testimonialDotContainer {
+	 width: 90%;
+	 max-width: 220px;
+	 display: flex;
+	 flex-direction: row;
+	 justify-content: space-between;
 }
-
-#testinomialDot01, #testimonialRightArrow, #testimonialBottomRightArrow {
-    background-color: #002A8F;
+ #textarea_editor .testinomialDots {
+	 width: 8px;
+	 height: 8px;
+	 border-radius: 4px;
+	 border: 1px solid #002A8F;
 }
-
-/* - - - - - - - -  Testimonial Arrows: */
-
-#testimonialArrowCont {
-    top: 200px;
-    height: 44px;
+ #textarea_editor #testinomialDot01, #textarea_editor #testimonialRightArrow, #textarea_editor #testimonialBottomRightArrow {
+	 background-color: #002A8F;
 }
-
-.testimonialArrows {
-    top: 0;
-    width: 44px;
-    height: 44px;
-    border-radius: 50%;
-    background-color: #CCCCCC;
+ #textarea_editor #testimonialArrowCont {
+	 top: 200px;
+	 height: 44px;
 }
-
-#testimonialLeftArrow, #testimonialBottomLeftArrow {
-    left: 50px;
+ #textarea_editor .testimonialArrows {
+	 top: 0;
+	 width: 44px;
+	 height: 44px;
+	 border-radius: 50%;
+	 background-color: #CCCCCC;
 }
-
-#testimonialRightArrow, #testimonialBottomRightArrow {
-    right: 50px;
+ #textarea_editor #testimonialLeftArrow, #textarea_editor #testimonialBottomLeftArrow {
+	 left: 50px;
 }
-
-.testimonialArrowIMG {
-    width: 9px;
-    height: 16px;
-    margin: 14px auto 0;
+ #textarea_editor #testimonialRightArrow, #textarea_editor #testimonialBottomRightArrow {
+	 right: 50px;
 }
-
-/* - - - - - - - -  Testimonial Bottom Arrows: */
-
-#testimonialBottomArrowCont {
-    height: 44px;
-    display: none;
+ #textarea_editor .testimonialArrowIMG {
+	 width: 9px;
+	 height: 16px;
+	 margin: 14px auto 0;
 }
-
-/* - - - - - - - -  Media Queries: */
-
-@media screen and (max-width:1600px) {
-
-    #testimonialBigCont {
-        padding: 20px;
-    }
-
+ #textarea_editor #testimonialBottomArrowCont {
+	 height: 44px;
+	 display: none;
 }
-
-@media screen and (max-width:1250px) {
-
-    .testimonials {
-        margin-bottom: 80px;
-    }
-
-    /* - - Testimonial Arrows - - */
-    #testimonialArrowCont {
-        display: none;
-    }
-    
-    #testimonialBottomArrowCont {
-        bottom: 35px;
-        display: inline-block;
-    }
-
+ @media screen and (max-width: 1600px) {
+	 #textarea_editor #testimonialBigCont {
+		 padding: 20px;
+	}
 }
-
-@media screen and (max-width:500px) {
-
-
-    #testimonialCont {
-        padding: 30px;
-    }
-
-    /* - - Testimonial Texts - - */
-
-    h2 {
-        font-size: 24px;
-    }
-
-    .testimonials {
-        font-size: 14px;
-        margin-bottom: 120px;
-    }
-
-    /* - - Testimonial Arrows - - */
-    #testimonialBottomArrowCont {
-        width: 70%;
-        bottom: 70px;
-    }
-
-    #testimonialBottomLeftArrow {
-        left: 0;
-    }
-
-    #testimonialBottomRightArrow {
-        right: 0;
-    }
-
+ @media screen and (max-width: 1250px) {
+	 #textarea_editor .testimonials {
+		 margin-bottom: 80px;
+	}
+	 #textarea_editor #testimonialArrowCont {
+		 display: none;
+	}
+	 #textarea_editor #testimonialBottomArrowCont {
+		 bottom: 35px;
+		 display: inline-block;
+	}
 }
+ @media screen and (max-width: 500px) {
+	 #textarea_editor #testimonialCont {
+		 padding: 30px;
+	}
+	 #textarea_editor h2 {
+		 font-size: 24px;
+	}
+	 #textarea_editor .testimonials {
+		 font-size: 14px;
+		 margin-bottom: 120px;
+	}
+	 #textarea_editor #testimonialBottomArrowCont {
+		 width: 70%;
+		 bottom: 70px;
+	}
+	 #textarea_editor #testimonialBottomLeftArrow {
+		 left: 0;
+	}
+	 #textarea_editor #testimonialBottomRightArrow {
+		 right: 0;
+	}
+}
+ 
