--- a/page.css
+++ b/page.css
@@ -30,7 +30,7 @@
  #textarea_editor a {
 	 text-decoration: none;
 }
- #textarea_editor a[x-apple-data-detectors=true] {
+ #textarea_editor a[x-apple-data-detectors='true'] {
 	 color: inherit !important;
 	 text-decoration: inherit !important;
 }
@@ -51,10 +51,10 @@
 	 font-size: 24px;
 }
  #textarea_editor .murgadoRed {
-	 background-color: #CF142B;
+	 background-color: #cf142b;
 }
  #textarea_editor .murgadoBlue {
-	 background-color: #002A8F;
+	 background-color: #002a8f;
 }
  #textarea_editor .spacer10 {
 	 height: 10px;
@@ -81,7 +81,7 @@
  #textarea_editor #testimonialCont {
 	 overflow: hidden;
 	 padding: 50px;
-	 background-color: #F4F4F4;
+	 background-color: #f4f4f4;
 	 transition: all 0.4s ease-in-out;
 }
  #textarea_editor .testimonials {
@@ -113,10 +113,10 @@
 	 width: 8px;
 	 height: 8px;
 	 border-radius: 4px;
-	 border: 1px solid #002A8F;
+	 border: 1px solid #002a8f;
 }
  #textarea_editor #testinomialDot01, #textarea_editor #testimonialRightArrow, #textarea_editor #testimonialBottomRightArrow {
-	 background-color: #002A8F;
+	 background-color: #002a8f;
 }
  #textarea_editor #testimonialArrowCont {
 	 top: 200px;
@@ -127,7 +127,7 @@
 	 width: 44px;
 	 height: 44px;
 	 border-radius: 50%;
-	 background-color: #CCCCCC;
+	 background-color: #cccccc;
 }
  #textarea_editor #testimonialLeftArrow, #textarea_editor #testimonialBottomLeftArrow {
 	 left: 50px;
